@@ -103,12 +103,10 @@ CREATE TABLE tx_quickshop_products (
   pi_flexform mediumtext, 
   text_properties tinyint(3) DEFAULT '0' NOT NULL,
 
+  filterPrompt tinytext,
   category int(11) DEFAULT '0' NOT NULL,
-  categoryEnable tinyint(3) DEFAULT '1' NOT NULL,
   dimension int(11) DEFAULT '0' NOT NULL,
-  dimensionEnable tinyint(3) DEFAULT '1' NOT NULL,
   material int(11) DEFAULT '0' NOT NULL,
-  materialEnable tinyint(3) DEFAULT '1' NOT NULL,
 
   image text,
   imagewidth mediumint(11) unsigned NOT NULL default '0',
